@@ -28,11 +28,11 @@ jobs:
     steps:
       # Checkout our repository
       - name: Checkout current repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Also check out the live docs, placing it into a pseudo "build" folder for the docs
       - name: Checkout live docs
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
             repository: MeteoSwiss/ampycloud
             ref: gh-pages
@@ -51,7 +51,7 @@ jobs:
 
       # Set up Python
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
             python-version: ${{ matrix.python-version }}
 
